# diploma

./: .gitignore  abbreviations.tex  abstract.tex  chapter1.tex  chapter2.tex  chapter3.tex  compile.sh  conclusions.tex  introduction.tex  main.tex  preamble.tex  references.bib  title_page.tex
appendices/: appendix_a.tex
bench/: README.md  aggregate.py  redo_openvpn_cpu.sh  run.sh
bench/lib/: metrics.sh  scenarios.sh  summarize.py
bench/remote/: remote_cpu_capture.sh
bench/tests/: conftest.py  test_aggregate.py  test_summarize.py  (+1 more)
deploy/: .env.example  README.md  setup.sh
docs/: architecture.md
presentation/: qa-prep.md  slides.tex  speaker-notes.md  storyboard.md
src/: .gitignore  Caddyfile  Dockerfile  Dockerfile.cli  alembic.ini  docker-compose.yml  pyproject.toml
src/alembic/: env.py
src/tests/: conftest.py  test_auth_unattended.py
src/tests/test_admin/: test_admin.py
src/tests/test_auth/: test_login.py  test_register.py
src/tests/test_integration/: test_full_flow.py
src/tests/test_totp/: test_totp.py
src/tests/test_vpn/: test_sessions.py
src/vpncli/: api_client.py  auth.py  config.py  main.py  tunnel.py
src/vpnservice/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py
src/vpnservice/admin/: router.py  schemas.py  service.py
src/vpnservice/auth/: jwt.py  router.py  schemas.py  service.py
src/vpnservice/tasks/: cleanup.py
src/vpnservice/totp/: router.py  schemas.py  service.py
src/vpnservice/vpn/: ip_allocator.py  router.py  schemas.py  service.py
src/vpnservice/wireguard/: manager.py  schemas.py
(+20 files in other folders)
