[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vpnservice"
version = "0.1.0"
description = "WireGuard VPN backend with 2FA"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.9,<3",
    "pyotp>=2.9,<3",
    "qrcode[pil]>=8,<9",
    "cryptography>=44,<45",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
cli = [
    "typer>=0.15,<1",
    "httpx>=0.28,<1",
    "rich>=13,<14",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
]

[project.scripts]
vpncli = "vpncli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
